--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
            #run: echo "The time was ${{ steps.hello.outputs.time }}"
            run: workflowExecuter\flowPowershell.ps1
            shell: powershell
-         - name: Run .\nodejs
+         - name: RUN "node workflowExecuter\flowNodeJs.js"
            run: node workflowExecuter\flowNodeJs.js
