--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
          # you must check out the repository
          - name: Checkout
            uses: actions/checkout@v2
+           with:
+              path: workflowExecuter
            env:
               message: ${{ github.event.head_commit.message }}
          - name: EXECUTE "workflowExecuter\flowPowershell.ps1"
